--- a/package.json
+++ b/package.json
@@ -1,87 +1,88 @@
 {
-  "name": "vue-demo",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "wh   git push origin master:gh-pages",
-  "private": true,
-  "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "npm run dev",
-    "build": "node build/build.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e"
+  "_args": [
+    [
+      "vue-calendar-component@2.8.2",
+      "D:\\btrack_client"
+    ]
+  ],
+  "_from": "vue-calendar-component@2.8.2",
+  "_id": "vue-calendar-component@2.8.2",
+  "_inBundle": false,
+  "_integrity": "sha512-BJh7xOBzM7QVcapcN4EbPQ1eZ8Pii1/oy+dzqjZTilRSIDD7SRPdFpnUJwZvs8lCrhtBAyJbYFsdm2SogXWHVQ==",
+  "_location": "/vue-calendar-component",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "vue-calendar-component@2.8.2",
+    "name": "vue-calendar-component",
+    "escapedName": "vue-calendar-component",
+    "rawSpec": "2.8.2",
+    "saveSpec": null,
+    "fetchSpec": "2.8.2"
   },
-  "dependencies": {
-    "vue": "^2.5.2",
-    "vue-calendar-component": "^2.8.2",
-    "vue-router": "^3.0.1",
-    "vue-toast-component": "^2.0.0"
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/vue-calendar-component/-/vue-calendar-component-2.8.2.tgz",
+  "_shasum": "09827f8f1b958c498cb797e772b7796c61d4c584",
+  "_spec": "2.8.2",
+  "_where": "D:\\btrack_client",
+  "author": {
+    "name": "zwh"
   },
+  "bundleDependencies": false,
+  "dependencies": {},
+  "deprecated": false,
+  "description": "基于vue2.0的一款日历组件",
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.0.1",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "cross-env": "^5.0.1",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.2",
-    "mocha": "^3.2.0",
-    "chai": "^4.1.2",
-    "sinon": "^4.0.0",
-    "sinon-chai": "^2.8.0",
-    "inject-loader": "^3.0.0",
-    "babel-plugin-istanbul": "^4.1.1",
-    "phantomjs-prebuilt": "^2.1.14",
-    "chromedriver": "^2.27.2",
-    "cross-spawn": "^5.0.1",
-    "nightwatch": "^0.9.12",
-    "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "portfinder": "^1.0.13",
-    "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.18.2",
-    "webpack-merge": "^4.1.0"
+    "babel-core": "^6.0.0",
+    "babel-eslint": "7.1.1",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "babel-runtime": "^6.11.6",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
+    "eslint": "3.14.1",
+    "eslint-config-airbnb-base": "11.0.1",
+    "eslint-friendly-formatter": "2.0.7",
+    "eslint-import-resolver-webpack": "0.8.1",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-html": "2.0.0",
+    "eslint-plugin-import": "2.2.0",
+    "file-loader": "^0.9.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "scss-loader": "0.0.1",
+    "style-loader": "^0.23.1",
+    "vue-loader": "^11.1.4",
+    "vue-template-compiler": "^2.2.1",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.11.3"
   },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
+  "directories": {
+    "lib": "lib"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  "keywords": [
+    "vue-calendar",
+    "calendar",
+    "vue-datetime",
+    "vue-datetime-picker"
+  ],
+  "license": "ISC",
+  "main": "./dist/index.js",
+  "name": "vue-calendar-component",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zwhGithub"
+  },
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --content-base=docs",
+    "start": "npm run dev"
+  },
+  "version": "2.8.2"
 }
